adding photo and mission statement

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <!-- Hero Section -->
     <header class="hero">
         <h2>Giving to Help, Helping to Care</h2>
-        <p>Our mission is to make a positive impact in the community through service, support, and compassion.</p>
+        <p>We believe every child deserves a fair chance — to learn, to grow, and to play.</p>
         <a href="#donate" class="cta">Support Our Work</a>
     </header>
 
@@ -32,8 +32,9 @@
     <section id="mission" class="section">
         <h2>Our Mission</h2>
         <p>
-            We are committed to supporting underserved children by providing resources 
-            and community programs that inspire hope and create real change.
+            Our mission is to raise awareness and resources for children living in poverty across the globe,  
+            ensuring they have access to education, nutrition, and the joy of play — 
+            essential ingredients for a brighter future.
         </p>
     </section>
 
