--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
 
 <body>
     <!-- Navigation -->
+     <div class="circle-logo-container">
+    <img src="background.jpg" class="circle-logo" alt="Organization Logo">
+    <h2 class="circle-text">GLOBAL HELPING HANDS FOR CHILDREN</h2>
+    </div>
      <nav>
         <h1 class - "logo">G2H4C</h1>
         <ul>
