circle image tweaking

--- a/index.html
+++ b/index.html
@@ -11,10 +11,19 @@
 
 <body>
     <!-- Navigation -->
-     <div class="circle-logo-container">
-    <img src="background.jpg" class="circle-logo" alt="Organization Logo">
-    <h2 class="circle-text">GLOBAL HELPING HANDS FOR CHILDREN</h2>
+    <div class="circle-logo-container">
+        <img src="background.jpg" class="circle-logo" alt="Logo">
+
+        <svg viewBox="0 0 500 300" class="curved-text">
+            <path id="curve" d="M 50 250 A 200 200 0 0 0 450 250" fill="transparent"/>
+            <text width="500">
+                <textPath href="#curve" startOffset="50%" text-anchor="middle">
+                    GLOBAL HELPING HANDS FOR CHILDREN
+                </textPath>
+            </text>
+        </svg>
     </div>
+
      <nav>
         <h1 class - "logo">G2H4C</h1>
         <ul>
