--- a/index.html
+++ b/index.html
@@ -1,20 +1,18 @@
 <!DOCTYPE html>
-<html lang = "en">
+<html lang="en">
 <head>
-
     <meta charset="UTF-8">
-    <meta name = "viewport" content - "width=device-width, initial-scale-1.0">
-    <title> G2H4C Nonprofit Organization</title>
+    <meta-name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>G2H4C – Global Helping Hands for Children</title>
     <link rel="stylesheet" href="styles.css">
 </head>
-
-
 <body>
-    <!-- Navigation -->
+
+    <!-- CIRCLE LOGO + CURVED TEXT -->
     <div class="circle-logo-container">
         <img src="background.jpg" class="circle-logo" alt="Logo">
 
-        <svg viewBox="0 0 500 300" class="curved-text">
+        <svg viewBox="0 0 500 320" class="curved-text">
             <path id="curve" d="M 50 250 A 200 200 0 0 0 450 250" fill="transparent"/>
             <text width="500">
                 <textPath href="#curve" startOffset="50%" text-anchor="middle">
@@ -24,35 +22,36 @@
         </svg>
     </div>
 
-     <nav>
-        <h1 class - "logo">G2H4C</h1>
-        <ul>
-            <lil><a href= "#mission"> Mission<a></li>
-            <lil><a href= "#programs"> Programs<a></li>
+    <!-- NAVIGATION -->
+    <nav>
+        <h1 class="logo">G2H4C</h1>
+
+        <ul class="nav-links">
+            <li><a href="#mission">Mission</a></li>
+            <li><a href="#programs">Programs</a></li>
             <li><a href="#volunteer">Volunteer</a></li>
             <li><a href="#contact">Contact</a></li>
         </ul>
-      <li><a class="donate-btn" href="#donate">Donate</a></li>
 
-     </nav>
-      <!-- Hero Section -->
+        <a class="donate-btn" href="#donate">Donate</a>
+    </nav>
+
+    <!-- ⭐ YOUR HERO SECTION (kept exactly as given) -->
     <header class="hero">
         <h2>We believe every child deserves a fair chance — to learn, to grow, and to play.</h2>
         <a href="#donate" class="cta">Support Our Work</a>
     </header>
 
-
-    <!-- Mission Section -->
+    <!-- MISSION SECTION -->
     <section id="mission" class="section">
         <h2>Our Mission</h2>
         <p>
-            Our mission is to raise awareness and resources for children living in poverty across the globe,  
-            ensuring they have access to education, nutrition, and the joy of play — 
-            essential ingredients for a brighter future.
+            We are committed to supporting underserved individuals by providing resources,
+            education, and community programs that inspire hope and create real change.
         </p>
     </section>
 
-    <!-- Programs Section -->
+    <!-- PROGRAM SECTION -->
     <section id="programs" class="section">
         <h2>Our Programs</h2>
         <div class="program-list">
@@ -71,7 +70,7 @@
         </div>
     </section>
 
-    <!-- Volunteer Section -->
+    <!-- VOLUNTEER -->
     <section id="volunteer" class="section">
         <h2>Become a Volunteer</h2>
         <p>Join our team of compassionate volunteers and make a difference.</p>
@@ -85,7 +84,7 @@
         </div>
     </section>
 
-    <!-- Contact -->
+    <!-- CONTACT -->
     <footer id="contact">
         <h2>Contact Us</h2>
         <p>Email: info@g2h4c.com</p>
