--- a/index.html
+++ b/index.html
@@ -1,83 +1,55 @@
 <!DOCTYPE html>
-<html lang = "en">
+<html lang="en">
 <head>
-
     <meta charset="UTF-8">
-    <meta name = "viewport" content - "width=device-width, initial-scale-1.0">
-    <title> G2H4C Nonprofit Organization</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>G2H4C – Global Helping Hands for Children</title>
     <link rel="stylesheet" href="styles.css">
 </head>
-
-
 <body>
-    <!-- Navigation -->
-     <nav>
-        <h1 class - "logo">G2H4C</h1>
-        <ul>
-            <lil><a href= "#mission"> Mission<a></li>
-            <lil><a href= "#programs"> Programs<a></li>
-             <li><a href="#volunteer">Volunteer</a></li>
-            <li><a href="#contact">Contact</a></li>
-            <li><a class="donate-btn" href="#donate">Donate</a></li>
+
+    <!-- NAVIGATION -->
+    <nav>
+        <h1 class="logo">G2H4C</h1>
+        <ul class="nav-links">
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About Us</a></li>
+            <li><a href="work.html">Our Work</a></li>
+            <li><a href="donate.html" class="donate-btn">Donate Now</a></li>
         </ul>
-     </nav>
-      <!-- Hero Section -->
+    </nav>
+
+    <!-- CIRCLE LOGO + CURVED TEXT -->
+    <div class="circle-logo-container">
+        <img src="background.jpg" class="circle-logo" alt="Logo">
+
+        <svg viewBox="0 0 500 260" class="curved-text">
+            <path id="curve" d="M 90 210 A 160 160 0 0 0 410 210" fill="transparent"/>
+            <text width="500">
+                <textPath href="#curve" startOffset="50%" text-anchor="middle">
+                    GLOBAL HELPING HANDS FOR CHILDREN
+                </textPath>
+            </text>
+        </svg>
+    </div>
+
+    <!-- HERO SECTION -->
     <header class="hero">
-        <h2>Giving to Help, Helping to Care</h2>
-        <p>We believe every child deserves a fair chance — to learn, to grow, and to play.</p>
-        <a href="#donate" class="cta">Support Our Work</a>
+        <h2 class="hero-title">
+            We believe every child deserves a fair chance — to learn, to grow, and to play.
+        </h2>
+        <a href="donate.html" class="cta">Support Our Work</a>
     </header>
 
-    <!-- Mission Section -->
+    <!-- MISSION SECTION -->
     <section id="mission" class="section">
         <h2>Our Mission</h2>
         <p>
-            Our mission is to raise awareness and resources for children living in poverty across the globe,  
-            ensuring they have access to education, nutrition, and the joy of play — 
-            essential ingredients for a brighter future.
+            We are committed to supporting underserved individuals by providing resources,
+            education, and community programs that inspire hope and create real change.
         </p>
     </section>
 
-    <!-- Programs Section -->
-    <section id="programs" class="section">
-        <h2>Our Programs</h2>
-        <div class="program-list">
-            <div class="program">
-                <h3>Community Outreach</h3>
-                <p>Weekly outreach events providing food, hygiene kits, and support services.</p>
-            </div>
-            <div class="program">
-                <h3>Youth Empowerment</h3>
-                <p>Workshops and mentoring to help young people build skills and opportunities.</p>
-            </div>
-            <div class="program">
-                <h3>Support Services</h3>
-                <p>Connecting individuals with resources for housing, mental health, and more.</p>
-            </div>
-        </div>
-    </section>
-
-    <!-- Volunteer Section -->
-    <section id="volunteer" class="section">
-        <h2>Become a Volunteer</h2>
-        <p>Join our team of compassionate volunteers and make a difference.</p>
-
-        <button id="volunteerBtn">Sign Up</button>
-
-        <div id="volunteerForm" class="hidden">
-            <input type="text" id="name" placeholder="Your Name">
-            <input type="email" id="email" placeholder="Email">
-            <button id="submitForm">Submit</button>
-        </div>
-    </section>
-
-    <!-- Contact -->
-    <footer id="contact">
-        <h2>Contact Us</h2>
-        <p>Email: info@g2h4c.com</p>
-        <p>© 2025 G2H4C Nonprofit Organization</p>
-    </footer>
-
-    <script src="script.js"></script>
 </body>
 </html>
+
