--- a/index.html
+++ b/index.html
@@ -55,3 +55,11 @@
 </body>
 </html>
 
+<svg viewBox="0 0 600 260" class="curved-text">
+    <path id="curve" d="M 80 200 A 220 180 0 0 0 520 200" fill="transparent"/>
+    <text width="600">
+        <textPath href="#curve" startOffset="50%" text-anchor="middle">
+            GLOBAL HELPING HANDS FOR CHILDREN
+        </textPath>
+    </text>
+</svg>
