--- a/donate.html
+++ b/donate.html
@@ -24,9 +24,15 @@
     <h2>Make a Difference Today</h2>
     <p>Your generosity helps children learn, grow, and thrive around the world.</p>
 
-    <a class="cta" href="#">Donate via PayPal / Stripe (Coming Soon)</a>
+  <a 
+  class="cta donate-btn"
+  href="https://of.deluxe.com/gateway/publish/552241e0-6246-f224-3d2c-b390280cff52"
+  target="_blank"
+  rel="noopener noreferrer"
+>
+  Donate Now
+</a>
 
-    <br><br><hr><br>
 
     <!-- REQUIRED INFO FOR PAYMENT PROCESSORS -->
 
@@ -37,7 +43,6 @@
         Address: 1008 North Tryon Street, Charlotte, NC
     </p>
 
-   
     <h3>Our Mailing Address</h3>
     <p>
         Global Helping Hands for Children (G2H4C)<br>
@@ -45,7 +50,6 @@
         Charlotte, NC<br>
         United States
     </p>
-
 
     <h3>Privacy Policy</h3>
     <p>
@@ -76,5 +80,3 @@
     </p>
 
 </section>
-
-
